syntax = "proto3";
package onomyprotocol.psm.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/onomyprotocol/onomy/x/psm/types";

message Params {
  bytes limit_total = 1 [
    (gogoproto.moretags) = "yaml:\"pool_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  bytes acceptable_price_ratio = 2 [
    (gogoproto.moretags) = "yaml:\"pool_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}